WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251071
Fix IsoCellSet::remove()'s return value.
https://bugs.webkit.org/show_bug.cgi?id=251071
Summary
Fix IsoCellSet::remove()'s return value.
Mark Lam
Reported
2023-01-23 23:57:56 PST
In
https://bugs.webkit.org/show_bug.cgi?id=250847
, Yijia Huang found a bug in Bitmap::concurrentTestAndClear() where it's returning the inverse of its expected result. Checking for all uses of concurrentTestAndClear(), we find that one result of IsoCellSet::remove() is also similarly incorrect. This patch fixes these errors, and also adds comments to document the intended return values of some relevant functions, as well as the reasoning behind how some of the return values are computed.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-23 23:58:22 PST
<
rdar://problem/104590361
>
Mark Lam
Comment 2
2023-01-24 00:07:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9020
EWS
Comment 3
2023-01-24 09:32:55 PST
Committed
259287@main
(3589dd6fe569): <
https://commits.webkit.org/259287@main
> Reviewed commits have been landed. Closing PR #9020 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug